<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:background="@color/background"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/status_textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="center"
		android:singleLine="true"
		android:textColor="@color/red"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/cardstatus_textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="center"
		android:singleLine="true"
		android:textColor="@color/red"
		android:textSize="18sp" />

	<TextView
		android:id="@+id/data_textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:gravity="center"
		android:maxLines="10"
		android:singleLine="false"
		android:textColor="@color/black"
		android:textSize="16sp" />

	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="0.1" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="20dp"
		android:gravity="center"
		android:orientation="vertical">

		<CheckBox
			android:id="@+id/sync_checkbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/card_sync_checkbox_label"
			android:textSize="20sp" />

		<Button
			android:id="@+id/open_close_button"
			style="@style/CardReaderActivityButton"
			android:layout_marginTop="@dimen/card_margintop"
			android:text="@string/open_card" />

		<EditText
			android:id="@+id/write_edittext"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/card_margintop"
			android:focusable="true"
			android:hint="@string/card_edtitext_hint"
			android:inputType="text"
			android:maxLength="20"
			android:textSize="20sp" />

		<Button
			android:id="@+id/write_data_button"
			style="@style/CardReaderActivityButton"
			android:layout_marginTop="@dimen/card_margintop"
			android:text="@string/write_data" />

		<Spinner
			android:id="@+id/read_apdu_selector_spinner"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/card_margintop"
			android:entries="@array/card_spinner_items" />

		<Button
			android:id="@+id/read_data_button"
			style="@style/CardReaderActivityButton"
			android:layout_marginTop="@dimen/card_margintop"
			android:text="@string/read_data" />


	</LinearLayout>

</LinearLayout>