<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:background="@color/background"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/statusTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:gravity="center"
		android:singleLine="true"
		android:textColor="@color/red"
		android:textSize="20sp" />

	<LinearLayout
		android:id="@+id/icao_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:gravity="center"
		android:orientation="horizontal">

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<ImageView
			android:id="@+id/icaoDG2ImageView"
			android:layout_width="240dp"
			android:layout_height="320dp"
			tools:ignore="ContentDescription" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<TextView
			android:id="@+id/icaoTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:orientation="horizontal">

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/openMRZBtn"
			style="@style/MRZActivityButton"
			android:text="@string/open_mrz"
			android:layout_weight="2"  />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/readMRZBtn"
			style="@style/MRZActivityButton"
			android:text="@string/read_mrz_button_label"
			android:layout_weight="2" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/readICAOBtn"
			style="@style/MRZActivityButton"
			android:text="@string/read_icao_button_label"
			android:layout_weight="2" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/openEPassBtn"
			style="@style/MRZActivityButton"
			android:text="@string/open_epassport"
			android:layout_weight="2" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

	</LinearLayout>

</LinearLayout>